@@ -5,6 +5,13 @@
 
 	* main/Base/FloatRange.class.php: float range implemention.
 
+2009-04-08	Vladlen Y. Koshelev
+
+	* main/Utils/ClassUtils.class.php, test/main/ClassUtilsTest.class.php:
+	isClassName() returns boolen.
+
+2009-04-07	Denis M. Gabaidulin
+
 	* main/Charts/Google. Chart line styles implemented.
 
 	* main/Charts/Google/GoogleGridedLineChart.class.php added.
